--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -106,7 +106,7 @@
                                     <li class="tmpl-login" *ngIf = "getToken"><a>My Account</a>
                                         <ul class="sub-menu">
                                             <li class=""><a href="" [routerLink]="['/profile']">Profile</a></li>
-                                            <li class=""><a href="" [routerLink]="['/organization']">My Organization</a></li>
+                                            <li class=""><a href="" [routerLink]="['/my-organizations']">My Organization's</a></li>
                                             <li class=""><a href="" [routerLink]="['/groups']">My Groups</a></li>
                                             <li class=""><a href="" [routerLink]="['/notification-setting']">Notification Settings</a></li> 
                                             <li class=""><a href="" [routerLink]="['/changepassword']">Change Password</a></li>
