--- a/src/app/view/organization/organization.component.html
+++ b/src/app/view/organization/organization.component.html
@@ -5,7 +5,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span class="trail-end">Organization View</span>
+                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span class="trail-end"><a [routerLink] = "['/my-organizations']" >Organization List</a></span><span class="sep">»</span> <span class="trail-end">Organization View</span>
             </div>
         </div>
 
