--- a/src/app/view/event/event.component.html
+++ b/src/app/view/event/event.component.html
@@ -26,7 +26,9 @@
                 </div>
             </div>
             
-            <div class="smart_tab">
+            <eventlist></eventlist>
+
+            <!--<div class="smart_tab">
                 <ul class="tabs">
                     <li [ngClass] = "{'active':(selectedIndex==0)}" class="tab-title " role="presentational"><a (click)="typeOfEvent('past',0)"  role="tab" tabindex="1" aria-selected="false">Past Events</a></li>
                     <li [ngClass] = "{'active':(selectedIndex==1)}" class="tab-title" role="presentational"><a (click)="typeOfEvent('current',1)" role="tab" tabindex="2" aria-selected="false">Current Events</a></li>
@@ -40,7 +42,7 @@
                             <li><a (click)="changeGridTolist(false)" [ngClass] = "{'active':(gridview==false)}" class="switcher last listview" id="listview">LIST VIEW</a></li>
                         </ul>	
                         <div class="tev_sorting_option">
-                            <!-- <form action="" method="get" class="tev_options_sel" _ngcontent-cqo-3=""id="event_sortby_frm" name="event_sortby_frm"> -->
+                           
                             <div class="select-wrap">
                                 <select (change) = "sortEventsData($event.target.value)" id="event_sortby" class="tev_options_sel" style="z-index: 10; opacity: 0;">
                                     <option value = "" selected="selected">Sort By</option>
@@ -53,13 +55,13 @@
                                     <option  value="random">Random</option>
                                 </select>                                
                             </div>
-                            <!-- </form> -->
+                            
                         </div>
-                    </div><!--END sort_options div -->
-                </div><!-- END directory_manager_tab Div -->
+                    </div><!-END sort_options div ->
+                </div><!- END directory_manager_tab Div ->
             </div>
 
-            <!--Start loop taxonomy page-->
+            <!-Start loop taxonomy page->
 
             <section *ngIf="gridview" id="loop_event_taxonomy" class="search_result_listing grid" style="display: block;">
                 <article id="event_27121" class="post" *ngFor = "let events of eventArr">
@@ -69,10 +71,10 @@
                         </a>
 
                     </div>
-                    <!-- Entry Start -->
+                    <!- Entry Start ->
                     <div class="entry">
                         <div class="event-wrapper"> 
-                            <!-- Entry title start -->
+                            <!- Entry title start ->
                             <div class="entry-title">
                                 <div class="event-title">		
                                     <span class="date">
@@ -93,9 +95,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Entry title end --> 
+                                <!- Entry title end -> 
 
-                                <!-- Entry details start -->
+                                <!- Entry details start ->
                                 <div class="entry-details">
                                     <p class="address" itemprop="address">308 West 46th Street New York, NY 10036</p>
                                     <p class="event_date">
@@ -106,12 +108,12 @@
                                     </p>
                                     <p class="time">
                                         <span>{{events.start_time}} To {{events.end_time}}</span>
-                                    </p><!--googleoff: all-->
-                                    <p class="phone">+86 10 6538 5537</p><!--googleon: all-->                                                                            </div>
-                                    <!-- Entry details end --> 
+                                    </p><!-googleoff: all->
+                                    <p class="phone">+86 10 6538 5537</p><!-googleon: all->                                                                            </div>
+                                    <!- Entry details end -> 
                                 </div>
-                                <!--Start Post Content -->
-                                <div class="entry-summary" itemprop="description"><p>{{events.event_description}} <a class="moretag" href="http://demo.templatic.com/eventum/city/new-york/event/disaster-a-70s-movie-musical/">&nbsp;Read more »</a></p></div>                                                                        <!-- End Post Content -->
+                                <!-Start Post Content ->
+                                <div class="entry-summary" itemprop="description"><p>{{events.event_description}} <a class="moretag" href="http://demo.templatic.com/eventum/city/new-york/event/disaster-a-70s-movie-musical/">&nbsp;Read more »</a></p></div>                                                                        <!- End Post Content ->
                                 <div class="rev_pin">
                                     <ul> 
                                         <li class="favourite">
@@ -126,14 +128,14 @@
                                     </ul>
                                 </div>                                                                    
                             </div>
-                            <!-- Entry End -->
+                            <!- Entry End ->
                         </div>
                     </article>
                 </section>
 
 
                 <section *ngIf="!gridview" id="loop_listing_taxonomy" class="widget_loop_taxonomy_wrap  list">
-                                    <!-- inside loop div start -->
+                                    <!- inside loop div start ->
                                          <article class="post" *ngFor = "let events of eventArr">
                                         <div class="listing_img">
                                             <a [routerLink]="['/event_detail']"> 
@@ -141,10 +143,10 @@
                                            </a>
                                         </div>
 
-                                        <!-- Entry Start -->
+                                        <!- Entry Start ->
                                         <div class="entry">
                                             <div class="event-wrapper"> 
-                                                <!-- Entry title start -->
+                                                <!- Entry title start ->
                                                 <div class="entry-title">
                                                     <div class="event-title">       
                                                         <span class="date">
@@ -158,9 +160,9 @@
                                                             <div class="directory_rating_row"><span class="single_rating"> <i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i> </span></div>
                                                         </div>
                                                     </div>
-                                                    <!-- Entry title end --> 
+                                                    <!- Entry title end -> 
 
-                                                    <!-- Entry details start -->
+                                                    <!- Entry details start ->
                                                     <div class="entry-details">
                                                   
                                                         <p class="event_date">
@@ -174,17 +176,17 @@
                                             <span itemprop="startDate" content="2014-07-08T22:00">{{events.start_time}}</span>
                                             To <span itemprop="endDate" content="2019-07-08T23:30">{{events.end_time}}</span>
                                         </span>
-                                                           </p><!--googleoff: all-->
+                                                           </p><!-googleoff: all->
                                                                                                                                
                                                     </div>
-                                                    <!-- Entry details end --> 
+                                                    <!- Entry details end -> 
                                                 </div>
-                                                <!--Start Post Content -->
+                                                <!-Start Post Content ->
                                                 <div class="entry-summary" itemprop="description">
                                                 <p [innerHTML]="events.event_description"></p>
                                                 <a *ngIf="events.readmore==1" [routerLink]="['/event_detail']" >Read More</a>
                                                
-                                                </div>                                                                        <!-- End Post Content -->
+                                                </div>                                                                        <!- End Post Content ->
                                                 <div class="rev_pin"><ul> 
                                                         <li class="favourite">              <span id="tmplfavorite_27097" class="fav fav_27097"><a href="javascript:void(0);" data-reveal-id="tmpl_reg_login_container" id="tmpl_login_frm_27097" data-id="27097" class="addtofav  small_btn" onclick="javascript:addToFavourite('27097', 'add');">Add to favorites</a></span>
                                                         </li>
@@ -193,10 +195,10 @@
 
                                                                    
                                                     </ul></div>                                                                    </div>
-                                            <!-- Entry End -->
+                                            <!- Entry End ->
                                         </div>
                                         </article>
-                                    <!-- inside loop div start -->
+                                    <!- inside loop div start ->
                                     
                                 </section>
 
@@ -214,7 +216,7 @@
                     </div>
                     
 
-                    <!--End loop taxonomy page -->
+                    <!-End loop taxonomy page -->
                 </div>
 
 
