--- a/src/app/view/my-organizations/my-organizations.component.html
+++ b/src/app/view/my-organizations/my-organizations.component.html
@@ -7,49 +7,50 @@
 				<span class="trail-begin">
 					<a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span class="trail-end">Organization List</span>
 				</div>
-			</div>
+		
 
 			<!-- start content part-->
-			<div id="content" role="main" class="large-9 small-12 columns">
+			<div id="content" role="main" class="col-md-12 col-sm-12 columns" *ngFor = "let org of organizationArr">
 				<div class="form-group">
 					<div class="col-sm-12">
-						<label class="pull-right"><a class="btn btn-md primary" href="" [routerLink] = "['/organization-add']">Edit Organization</a></label>
-						<label class="pull-right"><a class="btn btn-md primary" href="">Invite</a></label>
-						<label class="pull-right"><a class="btn btn-md primary" href="">Join</a></label>
+						<label class="pull-right"><a class="btn btn-md primary" href="" [routerLink] = "['/organization-add',org.organization_id]">Edit Organization</a></label>
+						<label class="pull-right"><a class="btn btn-md primary" href="javascript:void(0)">Invite</a></label>
+						<label class="pull-right"><a class="btn btn-md primary" href="javascript:void(0)">Join</a></label>
 					</div>
+					
 				</div>
-				<div class="author_cont">
-					<!-- Author photo on left side start -->
-					<div class="organization-logo">
-						<img src="http://auvac.org/uploads/organization/Noaalogo.gif" alt="admin" title="admin">
+				     <div class="organization-logo col-sm-6">
+						<img src="{{org.organization_logo}}"  title="{{org.title}}">
 					</div>
-					<!-- Author photo on left side end -->
-
-					<!-- Author photo on right side start -->
-					<div class="right_box form-horizontal">
-					<h2> <a [routerLink]="['/organization']">National Oceanic and Atmospheric Administration</a></h2>
-						<div class="user_dsb">
+                   <div class="right_box form-horizontal col-sm-6">
+                   <h2> <a [routerLink]="['/organization',org.organization_id]">{{org.organization_name}}</a></h2>
+                   <div class="user_dsb">
 							<div class="form-group">
 								<label class="col-sm-1 col-xs-2 control-label"><i class="fa fa-map-marker"></i></label>
-								<span class="col-sm-10 col-xs-10">AUVAC 86 Old Concord Turnpike Lee, New Hampshire 03861 USA</span>
+								<span class="col-sm-10 col-xs-10">{{org
+								.organization_location}}</span>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-1 control-label"><i class="fa fa-envelope-o"></i></label>
-								<span class="col-sm-10">info@auvac.org</span>
+								<span class="col-sm-10">{{org.organization_email}}</span>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-1 control-label"><i class="fa fa-phone"></i></label>
-								<span class="col-sm-10">(360) 440-2812</span>
+								<span class="col-sm-10">{{org.organization_contact}}</span>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-1 control-label"><i class="fa fa-globe"></i></label>
-								<span class="col-sm-10">www.auvac.org</span>
+								<span class="col-sm-10">{{org.organization_website}}</span>
 							</div>
-						</div>
+													</div>
+                    </div> 
+				
 
-					</div>
-					<!-- Author photo on right side end -->
-				</div>
-			</div>
-		</div>
+
+		 
+          
+
+		
+
+		   </div></div></div>
 	</section>
