--- a/src/app/view/my-organizations/my-organizations.component.html
+++ b/src/app/view/my-organizations/my-organizations.component.html
@@ -25,20 +25,20 @@
                    <div class="right_box form-horizontal col-sm-6">
                    <h2> <a [routerLink]="['/organization',org.organization_id]">{{org.organization_name}}</a></h2>
                    <div class="user_dsb">
-							<div class="form-group">
+							<div class="form-group" *ngIf="org.organization_location!=''">
 								<label class="col-sm-1 col-xs-2 control-label"><i class="fa fa-map-marker"></i></label>
 								<span class="col-sm-10 col-xs-10">{{org
 								.organization_location}}</span>
 							</div>
-							<div class="form-group">
+							<div class="form-group" *ngIf="org.organization_email!=''">
 								<label class="col-sm-1 control-label"><i class="fa fa-envelope-o"></i></label>
 								<span class="col-sm-10">{{org.organization_email}}</span>
 							</div>
-							<div class="form-group">
+							<div class="form-group" *ngIf="org.organization_contact!=''">
 								<label class="col-sm-1 control-label"><i class="fa fa-phone"></i></label>
 								<span class="col-sm-10">{{org.organization_contact}}</span>
 							</div>
-							<div class="form-group">
+							<div class="form-group" *ngIf="org.organization_website!=''">
 								<label class="col-sm-1 control-label"><i class="fa fa-globe"></i></label>
 								<span class="col-sm-10">{{org.organization_website}}</span>
 							</div>
