--- a/src/app/view/organization/organization.component.html
+++ b/src/app/view/organization/organization.component.html
@@ -5,7 +5,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span class="trail-end"><a [routerLink] = "['/my-organizations']" >Organization List</a></span><span class="sep">»</span> <span class="trail-end">Organization View</span>
+                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span class="trail-end"><a [routerLink] = "['/my-organizations']" >Organization List</a></span><span class="sep">»</span> <span class="trail-end">{{detailArr.organization_name}}</span>
             </div>
         </div>
 
@@ -13,37 +13,37 @@
         <div id="content" role="main" class="large-9 small-12 columns">
             <div class="form-group">
                 <div class="col-sm-12">
-                    <label class="pull-right"><a class="btn btn-md primary" href="" [routerLink] = "['/organization-add']">Edit Organization</a></label>
-                    <label class="pull-right"><a class="btn btn-md primary" href="">Invite</a></label>
-                    <label class="pull-right"><a class="btn btn-md primary" href="">Join</a></label>
+                    <label class="pull-right"><a class="btn btn-md primary" href="" [routerLink] = "['/organization-edit',detailArr.organization_id]">Edit Organization</a></label>
+                    <label class="pull-right"><a class="btn btn-md primary" href="javascript:void(0)">Invite</a></label>
+                    <label class="pull-right"><a class="btn btn-md primary" href="javascript:void(0)">Join</a></label>
                 </div>
             </div>
             <div class="author_cont">
                 <!-- Author photo on left side start -->
                 <div class="organization-logo">
-                    <img src="http://auvac.org/uploads/organization/Noaalogo.gif" alt="admin" title="admin">
+                    <img src="{{detailArr.organization_logo}}" title="{{detailArr.title}}">
                 </div>
                 <!-- Author photo on left side end -->
 
                 <!-- Author photo on right side start -->
                 <div class="right_box form-horizontal">
-                    <h2>National Oceanic and Atmospheric Administration</h2>
+                    <h2>{{detailArr.organization_name}}</h2>
                     <div class="user_dsb">
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="detailArr.organization_location!=''">
                             <label class="col-sm-1 col-xs-2 control-label"><i class="fa fa-map-marker"></i></label>
-                            <span class="col-sm-10 col-xs-10">AUVAC 86 Old Concord Turnpike Lee, New Hampshire 03861 USA</span>
+                            <span class="col-sm-10 col-xs-10">{{ detailArr.organization_location }}</span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="detailArr.organization_email!=''">
                             <label class="col-sm-1 control-label"><i class="fa fa-envelope-o"></i></label>
-                            <span class="col-sm-10">info@auvac.org</span>
+                            <span class="col-sm-10">{{ detailArr.organization_email }}</span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="detailArr.organization_contact!=''">
                             <label class="col-sm-1 control-label"><i class="fa fa-phone"></i></label>
-                            <span class="col-sm-10">(360) 440-2812</span>
+                            <span class="col-sm-10">{{ detailArr.organization_contact }}</span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="detailArr.organization_website!=''">
                             <label class="col-sm-1 control-label"><i class="fa fa-globe"></i></label>
-                            <span class="col-sm-10">www.auvac.org</span>
+                            <span class="col-sm-10">{{ detailArr.organization_website }}</span>
                         </div>
                     </div>
 
@@ -53,9 +53,7 @@
             <div class="entry-content event-description">
                 <h2>About <small></small></h2>
                 <div class="entry-content frontend-entry-content ">
-                    <p>This is organization description section where you can write in detail about your event. We have provided an editor for entering this information on Submit event page so your visitors will be able to format their description easily. They can highlight their content with 
-                        <strong>Bold</strong>, <em>Italic</em>, 
-                        <span style="text-decoration: underline;">Underline</span> options, they can also use ordered and un-ordered lists:
+                    <p [innerHTML]="detailArr.organization_description">
                     </p>
                 </div>
 
