--- a/src/app/assets/css/my-organizations/my-organizations.component.css
+++ b/src/app/assets/css/my-organizations/my-organizations.component.css
@@ -6,3 +6,12 @@
     vertical-align: top;
     width: 150px;
 }
+
+.org_btn a{
+    color: #fff !important;
+}
+
+.organization_div{
+	margin-bottom: 15px;
+}
+
