--- a/src/app/view/event/event.component.html
+++ b/src/app/view/event/event.component.html
@@ -5,10 +5,11 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a [routerLink]="['/']" title="Eventum" rel="home" class="trail-begin">Home</a>
+                    <a [routerLink]="['/']" title="home" rel="home" class="trail-begin">Home</a>
                 </span> 
-                <span class="sep">»</span> <a href="" title="New York">New York</a> 
-                <span class="sep">»</span> <span class="trail-end">Events</span>
+               <span class="sep">»</span> <span class="trail-end">
+               <a [routerLink]="['/event']" title="Events"> Events {{Category_name}}</a>
+               </span>
             </div>
         </div>
 
