--- a/src/app/view/my-organizations/my-organizations.component.html
+++ b/src/app/view/my-organizations/my-organizations.component.html
@@ -8,18 +8,14 @@
 					<a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span class="trail-end">Organization List</span>
 				</div>
 		
-
+            
 			<!-- start content part-->
-			<div id="content" role="main" class="col-md-12 col-sm-12 columns" *ngFor = "let org of organizationArr">
-				<div class="form-group">
-					<div class="col-sm-12">
-						<label class="pull-right"><a class="btn btn-md primary" href="" [routerLink] = "['/organization-add',org.organization_id]">Edit Organization</a></label>
-						<label class="pull-right"><a class="btn btn-md primary" href="javascript:void(0)">Invite</a></label>
-						<label class="pull-right"><a class="btn btn-md primary" href="javascript:void(0)">Join</a></label>
-					</div>
+			<div id="content" role="main" class="col-md-12 col-sm-12 columns">
+			  <h1 class="loop-title org_btn">Organization <a class="btn btn-warning pull-right" href="" [routerLink]="['/organization-add']">Add Organization</a></h1>
+				<div class="form-group organization_div row"  *ngFor = "let org of organizationArr">
 					
-				</div>
-				     <div class="organization-logo col-sm-6">
+					<div class="col-md-8">
+					  <div class="organization-logo col-sm-6">
 						<img src="{{org.organization_logo}}"  title="{{org.title}}">
 					</div>
                    <div class="right_box form-horizontal col-sm-6">
@@ -43,7 +39,16 @@
 								<span class="col-sm-10">{{org.organization_website}}</span>
 							</div>
 													</div>
-                    </div> 
+                    </div> 	
+
+					</div>
+					<div class="col-sm-4 pull-right ">
+						<label class="org_btn"><a class="btn btn-xs primary" href="" [routerLink] = "['/organization-add',org.organization_id]">Edit Organization</a></label>
+						<label class="org_btn"><a class="btn btn-xs primary" href="javascript:void(0)">Invite</a></label>
+						<label class="org_btn"><a class="btn btn-xs primary" href="javascript:void(0)">Join</a></label>
+					</div>					
+				</div>
+				  
 				
 
 
