--- a/src/app/view/organization/organization.component.html
+++ b/src/app/view/organization/organization.component.html
@@ -97,195 +97,21 @@
                     </div>
                 </div>
             </div>
-
-            <div class="smart_tab">
-                <ul class="tabs">
-                    <li [ngClass] = "{'active':(selectedIndex==0)}" class="tab-title " role="presentational"><a (click)="typeOfEvent('past',0)"  role="tab" tabindex="1" aria-selected="false">Past Events</a></li>
-                    <li [ngClass] = "{'active':(selectedIndex==1)}" class="tab-title" role="presentational"><a (click)="typeOfEvent('current',1)" role="tab" tabindex="2" aria-selected="false">Current Events</a></li>
-                    <li [ngClass] = "{'active':(selectedIndex==2)}" class="tab-title" role="presentational"><a (click)="typeOfEvent('upcoming',2)" role="tab" tabindex="3" aria-selected="false">Upcoming Events</a></li>
-                </ul> 
-
-                <div class="directory_manager_tab clearfix">
-                    <div class="sort_options">
-                        <ul class="view_mode viewsbox">
-                            <li><a (click)="changeGridTolist(true)" [ngClass] = "{'active':(gridview==true)}" class="switcher first gridview" id="gridview">GRID VIEW</a></li>
-                            <li><a (click)="changeGridTolist(false)" [ngClass] = "{'active':(gridview==false)}" class="switcher last listview" id="listview">LIST VIEW</a></li>
-                        </ul>   
-                        <div class="tev_sorting_option">
-                            <!-- <form action="" method="get" class="tev_options_sel" _ngcontent-cqo-3=""id="event_sortby_frm" name="event_sortby_frm"> -->
-                            <div class="select-wrap">
-                                <select (change) = "sortEventsData($event.target.value)" id="event_sortby" class="tev_options_sel" style="z-index: 10; opacity: 0;">
-                                    <option value = "" selected="selected">Sort By</option>
-                                    <option  value="title_asc">Title Ascending</option>
-                                    <option  value="title_desc">Title Descending</option>
-                                    <option  value="stdate_low_high">Start Date low to high</option>
-                                    <option  value="stdate_high_low">Start Date high to low</option>
-                                    <option  value="stdate_low_high">Reviews</option>
-                                    <option  value="stdate_high_low">Rating</option>
-                                    <option  value="random">Random</option>
-                                </select>                                
-                            </div>
-                            <!-- </form> -->
-                        </div>
-                    </div><!--END sort_options div -->
-                </div><!-- END directory_manager_tab Div -->
-            </div>
+                 <eventlist></eventlist>
+           
 
 
-            <!--Start loop taxonomy page-->
+   
 
-            <section *ngIf="gridview" id="loop_event_taxonomy" class="search_result_listing grid" style="display: block;">
-                <article id="event_27121" class="post" *ngFor = "let events of eventArr">
-                    <div class="listing_img">
-                        <a href="" [routerLink]="['/event_detail']"> 
-                            <img src="{{events.featured_image}}" alt="image" title="event-(13)">
-                        </a>
-
-                    </div>
-                    <!-- Entry Start -->
-                    <div class="entry">
-                        <div class="event-wrapper"> 
-                            <!-- Entry title start -->
-                            <div class="entry-title">
-                                <div class="event-title">       
-                                    <span class="date">
-                                        {{events.start_date}}           <span></span>
-                                    </span>
-                                    <h2 class="entry-title">
-                                        <a itemprop="url" href="" [routerLink]="['/event_detail']" title="Disaster! A 70’s Movie…Musical!" rel="bookmark">{{events.event_title}}</a>
-                                    </h2>
-                                    <div class="listing_rating">
-                                        <div class="directory_rating_row">
-                                            <span class="single_rating"> 
-                                                <i class="rating-on"></i>
-                                                <i class="rating-on"></i>
-                                                <i class="rating-on"></i>
-                                                <i class="rating-on"></i>
-                                                <i class="rating-on"></i>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Entry title end --> 
-
-                                <!-- Entry details start -->
-                                <div class="entry-details">
-                                    <p class="address" itemprop="address">308 West 46th Street New York, NY 10036</p>
-                                    <p class="event_date">
-                                        <span>
-                                            <span itemprop="startDate" content="2014-07-08T22:00">{{events.start_date}}</span>
-                                            To <span itemprop="endDate" content="2019-07-08T23:30">{{events.end_date}}</span>
-                                        </span>
-                                    </p>
-                                    <p class="time">
-                                        <span>{{events.start_time}} To {{events.end_time}}</span>
-                                    </p><!--googleoff: all-->
-                                    <p class="phone">+86 10 6538 5537</p><!--googleon: all-->                                                                            </div>
-                                    <!-- Entry details end --> 
-                                </div>
-                                <!--Start Post Content -->
-                                <div class="entry-summary" itemprop="description"><p>{{events.event_description}} <a class="moretag" href="http://demo.templatic.com/eventum/city/new-york/event/disaster-a-70s-movie-musical/">&nbsp;Read more »</a></p></div>                                                                        <!-- End Post Content -->
-                                <div class="rev_pin">
-                                    <ul> 
-                                        <li class="favourite">
-                                            <span id="tmplfavorite_27121" class="fav fav_27121">
-                                                <a href="javascript:void(0);" data-reveal-id="tmpl_reg_login_container" id="tmpl_login_frm_27121" data-id="27121" class="addtofav  small_btn">Add to favorites</a>
-                                            </span>
-                                        </li>
-
-                                        <li class="review"> <a id="reviews_show" href="">8 &nbsp;</a></li>
-
-                                        <li class="pinpoint"><a id="pinpoint_27121" class="ping" href="">Pinpoint</a></li>               
-                                    </ul>
-                                </div>                                                                    
-                            </div>
-                            <!-- Entry End -->
-                        </div>
-                    </article>
-                </section>
+           
 
 
-                <section *ngIf="!gridview" id="loop_listing_taxonomy" class="widget_loop_taxonomy_wrap  list">
-                                    <!-- inside loop div start -->
-                                         <article class="post" *ngFor = "let events of eventArr">
-                                        <div class="listing_img">
-                                            <a [routerLink]="['/event_detail']"> 
-                                            <img src="{{events.featured_image}}" alt="image" title="{{events.event_title}}">
-                                           </a>
-                                        </div>
-
-                                        <!-- Entry Start -->
-                                        <div class="entry">
-                                            <div class="event-wrapper"> 
-                                                <!-- Entry title start -->
-                                                <div class="entry-title">
-                                                    <div class="event-title">       
-                                                        <span class="date">
-                                                            {{events.start_date}}  
-                                                        </span>
-                                                        <h2 class="entry-title">
-                                                            
-                                                             <a itemprop="url" [routerLink]="['/event_detail']" title="{{events.event_title}}" rel="bookmark">{{events.event_title}}</a></h2>
-
-                                                        <div class="listing_rating">
-                                                            <div class="directory_rating_row"><span class="single_rating"> <i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i> </span></div>
-                                                        </div>
-                                                    </div>
-                                                    <!-- Entry title end --> 
-
-                                                    <!-- Entry details start -->
-                                                    <div class="entry-details">
-                                                  
-                                                        <p class="event_date">
-                                                            <span>
-                                                                <span itemprop="startDate" content="2014-07-08T15:30"> {{events.start_date}}</span>
-                                                                To <span itemprop="endDate" content="2019-07-08T17:30"> {{events.end_date}}</span>
-                                                            </span>
-                                                        </p>
-                                                        <p class="time">
-                                                        <span>
-                                            <span itemprop="startDate" content="2014-07-08T22:00">{{events.start_time}}</span>
-                                            To <span itemprop="endDate" content="2019-07-08T23:30">{{events.end_time}}</span>
-                                        </span>
-                                                           </p><!--googleoff: all-->
-                                                                                                                               
-                                                    </div>
-                                                    <!-- Entry details end --> 
-                                                </div>
-                                                <!--Start Post Content -->
-                                                <div class="entry-summary" itemprop="description">
-                                                <p [innerHTML]="events.event_description"></p>
-                                                <a *ngIf="events.readmore==1" [routerLink]="['/event_detail']" >Read More</a>
-                                               
-                                                </div>                                                                        <!-- End Post Content -->
-                                                <div class="rev_pin"><ul> 
-                                                        <li class="favourite">              <span id="tmplfavorite_27097" class="fav fav_27097"><a href="javascript:void(0);" data-reveal-id="tmpl_reg_login_container" id="tmpl_login_frm_27097" data-id="27097" class="addtofav  small_btn" onclick="javascript:addToFavourite('27097', 'add');">Add to favorites</a></span>
-                                                        </li>
-
-                                                        <li class="review"> <a href="javascript:void(0);" id="reviews_show" href="http://demo.templatic.com/eventum/city/new-york/event/a-moving-sound/#comments">8 &nbsp;</a></li>
-
-                                                                   
-                                                    </ul></div>                                                                    </div>
-                                            <!-- Entry End -->
-                                        </div>
-                                        </article>
-                                    <!-- inside loop div start -->
-                                    
-                                </section>
+               
 
 
 
 
 
-
-                    <div id="listpagi">
-                        <div class="pagination pagination-position">
-                            <a href="" class="current page-numbers" title="1">1</a>
-                            <a class= "page-numbers"><strong>2</strong></a>
-                            <a href="" class="next page-numbers"><strong>NEXT</strong></a>                  
-                        </div>
-                    </div>
-            <!--End loop taxonomy page -->
         </div>
         <!-- #content --> 
 
