--- a/src/app/view/organization-add/organization-add.component.html
+++ b/src/app/view/organization-add/organization-add.component.html
@@ -39,7 +39,7 @@
                         </div>
                     <div class="form_row clearfix">
                         <label>About the Organization<span class="indicates">*</span></label>
-                        <textarea class="form-control ckeditor" name="organization_description" rows="6"  ngModel></textarea>
+                        <textarea class="form-control" name="organization_description" rows="6"  ngModel></textarea>
                          <ul class="error" *ngIf="errors['organization_description']!=''" >
                         <li *ngFor="let org_err of errors['organization_description']" >
                           {{org_err}}  
